# softmall-test-back

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
src/: config.py  database.py  main.py
src/auth/: actions.py  dals.py  jwt.py  router.py  schemas.py
src/companies/: actions.py  dals.py  routers.py  schemas.py
src/core/: dal.py  middlewares.py  schemas.py  utils.py
src/groups/: actions.py  dals.py  routers.py  schemas.py
src/models/: alembic.ini
src/models/migrations/: __init__.py  env.py
src/models/migrations/versions/: 2025_02_18_2132-2666a787ad06_initial_migration.py  2025_02_18_2155-70ea6884ba09_init.py  2025_02_18_2311-fc82411fd269_added_auth.py  2025_02_18_2330-34468d4b1e0e_separate_primary_id_to_base.py
src/models/src/: __init__.py  models.py
src/models/src/modules/: auth.py  company.py  dicts.py  module.py  roles.py  settings.py  user.py
src/roles/: actions.py  dals.py  routers.py  schemas.py
src/settings/: actions.py  dals.py  routers.py  schemas.py
src/tests/: conftest.py  test_roles_flow.py  test_settings_flow.py  test_user_flow.py
src/timezones/: actions.py  dals.py  routers.py  schemas.py
src/users/: actions.py  dals.py  router.py  schemas.py
